# minikalman-rs

./: .codespellrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  Taskfile.dist.yaml  build.rs
.github/workflows/: embedded-stm32f303.yml  rust.yml  test.yml
benches/: gravity.rs  inversion.rs  mult.rs
crates/minikalman/: Cargo.toml  README.md  katex-header.html
crates/minikalman-traits/: Cargo.toml
crates/minikalman-traits/src/: kalman.rs  lib.rs  matrix.rs
crates/minikalman-traits/src/kalman/: filter_trait.rs  matrix_types.rs
crates/minikalman-traits/src/matrix/: data.rs  data_type.rs  traits.rs
crates/minikalman/benches/: gravity.rs  gravity_fixed.rs  inversion.rs  mult.rs
crates/minikalman/examples/: car_1d.rs  car_2d.rs  gravity.rs  gravity_fixed.rs  radar_2d.rs  radar_2d_ukf.rs  radar_2d_ukf_builder.rs
crates/minikalman/fuzz/: .gitignore  Cargo.toml
crates/minikalman/fuzz/corpus/extended_filter/: seed
crates/minikalman/fuzz/corpus/matrix_mult/: seed
crates/minikalman/fuzz/corpus/regular_filter/: seed
crates/minikalman/fuzz/fuzz_targets/: extended_filter.rs  matrix_cholesky.rs  matrix_mult.rs  regular_filter.rs
crates/minikalman/src/: buffer_builder.rs  buffer_types.rs  buffers.rs  controls.rs  filter_traits.rs  filter_types.rs  inputs.rs  kalman.rs  kalman_builder.rs  kalman_filter_trait.rs  kalman_new.rs  lib.rs  matrix.rs  matrix_traits.rs  matrix_types.rs  measurement.rs  measurement_new.rs  more_matrix_traits.rs  more_matrix_types.rs  more_traits.rs  observations.rs  static_macros.rs  test_dummies.rs  test_filter.rs  type_traits.rs  types.rs
crates/minikalman/src/buffer_types/: innovation_residual_covariance_matrix_buffer.rs  innovation_vector_buffer.rs  input_covariance_buffer.rs  input_matrix_buffer.rs  input_vector_buffer.rs  kalman_gain_matrix_buffer.rs  measurement_observation_matrix_buffer.rs  measurement_process_noise_covariance_matrix_buffer.rs  measurement_transformation_matrix_buffer.rs  measurement_vector_buffer.rs  state_prediction_vector_buffer.rs  state_vector_buffer.rs  system_covariance_matrix_buffer.rs  system_matrix_buffer.rs  temporary_bq_matrix_buffer.rs  temporary_hp_matrix_buffer.rs  temporary_khp_matrix_buffer.rs  temporary_pht_matrix_buffer.rs  temporary_residual_covariance_inverted_matrix_buffer.rs  temporary_state_matrix_buffer.rs
crates/minikalman/src/buffers/: builder.rs  macros.rs  types.rs
crates/minikalman/src/buffers/types/: control_covariance_buffer.rs  control_matrix_buffer.rs  control_process_noise_covariance_buffer.rs  control_vector_buffer.rs  cross_covariance_matrix_buffer.rs  direct_process_noise_covariance_buffer.rs  estimate_covariance_matrix_buffer.rs  innovation_covariance_matrix_buffer.rs  innovation_residual_covariance_matrix_buffer.rs  innovation_vector_buffer.rs  input_covariance_buffer.rs  input_matrix_buffer.rs  input_vector_buffer.rs  kalman_gain_matrix_buffer.rs  measurement_noise_covariance_matrix_buffer.rs  measurement_observation_matrix_buffer.rs  measurement_process_noise_covariance_matrix_buffer.rs  measurement_vector_buffer.rs  observation_matrix_buffer.rs  process_noise_covariance_buffer.rs  sigma_observed_matrix_buffer.rs  sigma_point_matrix_buffer.rs  sigma_predicted_matrix_buffer.rs  sigma_propagated_matrix_buffer.rs  sigma_weights_vector_buffer.rs  state_prediction_vector_buffer.rs  state_transition_matrix_buffer.rs  state_vector_buffer.rs  system_covariance_matrix_buffer.rs  system_matrix_buffer.rs  temp_sigma_p_buffer.rs  temporary_bq_matrix_buffer.rs  temporary_hp_matrix_buffer.rs  temporary_khp_matrix_buffer.rs  temporary_pht_matrix_buffer.rs  temporary_residual_covariance_inverted_matrix_buffer.rs  temporary_state_matrix_buffer.rs
crates/minikalman/src/filter_types/: innovation_covariance_matrix_buffer.rs  innovation_vector_buffer.rs  input_matrix_buffer.rs  input_vector_buffer.rs  kalman_gain_matrix_buffer.rs  measurement_process_noise_covariance_matrix_buffer.rs  measurement_transformation_matrix_buffer.rs  measurement_vector_buffer.rs  state_prediction_vector_buffer.rs  state_vector_buffer.rs  system_covariance_matrix_buffer.rs  system_matrix_buffer.rs  temporary_bq_matrix_buffer.rs  temporary_hp_matrix_buffer.rs  temporary_khp_matrix_buffer.rs  temporary_pht_matrix_buffer.rs  temporary_residual_covariance_inverted_matrix_buffer.rs  temporary_state_matrix_buffer.rs
crates/minikalman/src/kalman/: extended.rs  filter_trait.rs  matrix_types.rs  regular.rs  unscented.rs
crates/minikalman/src/kalman_builder/: extended.rs  regular.rs  unscented.rs
crates/minikalman/src/matrix/: data.rs  data_type.rs  nalgebra_support.rs  row_major.rs  traits.rs
crates/minikalman/src/matrix/data/: matrix_data_array.rs  matrix_data_boxed.rs  matrix_data_mut.rs  matrix_data_ref.rs  matrix_data_row_major.rs  matrix_data_row_major_mut.rs
crates/minikalman/src/observations/: extended.rs  regular.rs  unscented.rs
crates/minikalman/tests/: gravity.rs  gravity_q_tuned.rs  proptest_filter.rs  proptest_matrix.rs  proptest_ukf.rs  simple.rs  ukf_covariance_functions.rs  ukf_filter.rs
crates/minikalman/tests/common/: mod.rs
examples/: gravity.rs  gravity_fixed.rs
src/: kalman.rs  lib.rs  matrix.rs  matrix_ops.rs  measurement.rs  scratch.rs  types.rs
tests/: gravity.rs  gravity_q_tuned.rs
xbuild-tests/stm32/: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
xbuild-tests/stm32/.cargo/: config.toml
xbuild-tests/stm32/src/: kalman_example.rs  kalman_fixed_example.rs  kalman_float_example.rs  main.rs
