[workspace]
resolver = "2"
members = ["crates/minikalman", "xbuild-tests/stm32"]
default-members = ["crates/minikalman"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
