[workspace]
resolver = "2"
members = ["crates/minikalman", "crates/minikalman-traits", "xbuild-tests/stm32"]
default-members = ["crates/minikalman"]

[profile.dev]      # Needed for the embedded cross-compilation projects
panic = "abort"

[profile.release]  # Needed for the embedded cross-compilation projects
panic = "abort"
codegen-units = 1  # better optimizations
debug = true       # symbols are nice, and they don't increase the size on Flash
lto = true         # better optimizations
