[package]
name = "minikalman"
version = "0.4.0"
description = "A microcontroller targeted Kalman filter implementation"
repository = "https://github.com/sunsided/minikalman-rs"
authors = ["Markus Mayer"]
keywords = ["kalman-filter", "embedded", "fixed-point", "robotics", "slam"]
categories = ["aerospace", "algorithms", "science::robotics", "no-std", "embedded"]
license = "MIT"
readme = "../../README.md"
edition = "2021"
rust-version = "1.70.0"

[[bench]]
name = "inversion"
harness = false

[[bench]]
name = "mult"
harness = false

[[bench]]
name = "gravity"
harness = false

[[bench]]
name = "gravity_fixed"
harness = false
required-features = ["fixed"]

[[example]]
name = "gravity"
path = "examples/gravity.rs"
required-features = ["std", "alloc"]

[[example]]
name = "fixed"
path = "examples/gravity_fixed.rs"
required-features = ["fixed", "std", "alloc"]

[[example]]
name = "car-1d"
path = "examples/car_1d.rs"
required-features = ["std"]

[[example]]
name = "radar-2d"
path = "examples/radar_2d.rs"
required-features = ["std"]

[features]
default = ["libm", "alloc"]
std = ["num-traits/std", "alloc"]
libm = ["dep:libm", "num-traits/libm"]
unsafe = []
fixed = ["dep:fixed", "fixed/num-traits"]
alloc = []
no_assert = []

[dependencies]
fixed = { version = "1.27.0", optional = true }
libm = { version = "0.2.8", optional = true }
num-traits = { version = "0.2.19", default-features = false }
stdint = { version = "1.0.0", default-features = false, optional = true }

[dev-dependencies]
assert_float_eq = "1.1.3"
colored = { version = "2.1.0" }
criterion = "0.5.1"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
