[package]
name = "minikalman"
description.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"
rust-version = "1.70.0"

[[bench]]
name = "inversion"
harness = false

[[bench]]
name = "mult"
harness = false

[[bench]]
name = "gravity"
harness = false

[[bench]]
name = "gravity_fixed"
harness = false
required-features = ["fixed"]

[[example]]
name = "gravity"
path = "examples/gravity.rs"
required-features = ["std"]

[[example]]
name = "fixed"
path = "examples/gravity_fixed.rs"
required-features = ["fixed", "std"]

[[example]]
name = "car-1d"
path = "examples/car_1d.rs"
required-features = ["std"]

[[example]]
name = "radar-2d"
path = "examples/radar_2d.rs"
required-features = ["std"]

[[test]]
name = "proptest_matrix"
required-features = ["std"]

[[test]]
name = "proptest_filter"
required-features = ["std"]

[features]
## Enables `libm` and `alloc` features by default.
default = ["libm", "alloc"]
## Disabled by default. Disables the `no_std` configuration attribute (enabling `std` support).
std = ["num-traits/std", "alloc"]
## Enables [libm](https://crates.io/crates/libm) support.
libm = ["dep:libm", "num-traits/libm"]
## Enables some unsafe pointer operations. Disabled by default;
## when turned off, compiles the crate as `#![forbid(unsafe)]`.
unsafe = []
## Enables fixed-point support via the [fixed](https://crates.io/crates/fixed) crate.
fixed = ["dep:fixed", "fixed/num-traits"]
## Enables allocation support for builder types.
alloc = []
no_assert = []
## Enables [micromath](https://crates.io/crates/micromath) support.
micromath = ["dep:micromath"]
## Enables [nalgebra](https://crates.io/crates/nalgebra) support.
## For major parts, must be used in conjunction with `unsafe`.
nalgebra = ["dep:nalgebra"]

# Unstable implementation
# nalgebra_std = ["std", "nalgebra", "nalgebra/std"]
# nalgebra_alloc = ["alloc", "nalgebra", "nalgebra/alloc"]
# nalgebra_libm = ["libm", "nalgebra", "nalgebra/libm"]

[dependencies]
fixed = { version = "1.23.1", optional = true }
libm = { version = "0.2.8", optional = true }
micromath = { version = "2.1.0", optional = true, features = ["num-traits"] }
nalgebra = { version = "0.32.6", optional = true, default-features = false }
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
assert_float_eq = "1.1.3"
colored = { version = "2.1.0" }
criterion = "0.5.1"
lazy_static = "1.4.0"
proptest = "1.5"
rand = "0.8.5"
rand_distr = "0.4.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
