[package]
name = "stm32"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["kalman-fixed"]
kalman-float = ["minikalman/float", "minikalman/libm"]
kalman-fixed = ["minikalman/fixed"]

[dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
embedded-hal = "1.0.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
minikalman = { version = "0.3.0", path = "../..", default-features = false }
panic-halt = "0.2.0"
stm32f3 = { version = "0.15.1", features = ["stm32f303"] }
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
