[package]
name = "stm32"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["kalman-fixed", "kalman-float"]
kalman-float = ["minikalman/libm"]
kalman-fixed = ["minikalman/fixed"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
embedded-hal = "1.0.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
minikalman = { version = "*", path = "../../crates/minikalman", default-features = false }
panic-halt = "0.2.0"
stm32f3 = { version = "0.15.1", features = ["stm32f303"] }
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
